objects/Wave__c.object
<CustomObject>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <description>Date of Graduation for this wave</description>
        <inlineHelpText>Date of Graduation for this wave</inlineHelpText>
        <label>Graduation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_Letter_Check_Complete__c</fullName>
        <label>Graduation Letter Check Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_Letter_Published__c</fullName>
        <label>Graduation Letter Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Graduation_Postcode__c</fullName>
        <label>Graduation Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Time__c</fullName>
        <label>Graduation Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Graduation_Venue_Address__c</fullName>
        <label>Graduation Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Venue_Formula__c</fullName>
        <formula>Wave_Cluster__r.Graduation_venue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Graduation Venue Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Venue__c</fullName>
        <label>Graduation Venue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Graduation_end_time__c</fullName>
        <label>Graduation end time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_start_time__c</fullName>
        <inlineHelpText>Time that summer staff need to be at the venue</inlineHelpText>
        <label>Graduation: Staff start time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTMU_Document_Name__c</fullName>
        <formula>Name &amp; &quot;_HTMU&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTMU Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTMU_Graduation_Programme_Type_Formula__c</fullName>
        <formula>CASE(  Pilot_or_Non_Pilot__c , &quot;Pilot&quot;, &quot;a2MC0000000PgCG&quot;, &quot;Non Pilot&quot;, &quot;a2MC0000000PgCV&quot;, &quot;Invalid ID&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HTMU: Graduation: Programme Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTMU_Graduation_Programme_Type_Text__c</fullName>
        <label>HTMU: Graduation: Programme Type Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HTR__c</fullName>
        <label>HTR?</label>
        <summaryFilterItems>
            <field>Wave_Selection__c.HTR_Filter__c</field>
            <operation>equals</operation>
            <value>HTR YP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Wave_Selection__c.Status_equals_assigned_or_reserved__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </summaryFilterItems>
        <summaryForeignKey>Wave_Selection__c.Wave__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Half_Clusters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>LInk to the half cluster Object for programmes reporting</inlineHelpText>
        <label>Sub Cluster</label>
        <referenceTo>Half_Cluster__c</referenceTo>
        <relationshipLabel>Waves</relationshipLabel>
        <relationshipName>Waves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IWL_voucher_amount__c</fullName>
        <label>IWL voucher amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_school_capacity_inc_overbooking__c</fullName>
        <description>Number of places, including overbooking, available for YP at independent schools. Calculated from total capacity and independent percentage limit</description>
        <formula>YP_place_capacity_including_overbooking__c *  Ind_school_type_place_limit_percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of places, including overbooking, available for YP at independent schools. Calculated from total capacity and independent percentage limit</inlineHelpText>
        <label>Ind school capacity inc overbooking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ind_school_type_place_limit_percentage__c</fullName>
        <description>Percentage of YP on the wave who can attend an independent school</description>
        <inlineHelpText>Percentage of YP on the wave who can attend an independent school</inlineHelpText>
        <label>Ind school type place limit percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Info_Eve_Mktg_email_address__c</fullName>
        <label>PIE Sales email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Info_Eve_Mktg_lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to the Marketing person running the info eve</description>
        <inlineHelpText>Link to the Marketing person running the info eve</inlineHelpText>
        <label>PIE Sales lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waves4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Info_Eve_Mktg_lead_email__c</fullName>
        <description>Formula, pulling through the Mktg lead user&apos;s email address</description>
        <formula>Info_Eve_Mktg_lead__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The email address of the Marketing. Automatically populated once the Marketing lead has been selected</inlineHelpText>
        <label>PIE Sales lead email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Eve_Mktg_lead_mobile__c</fullName>
        <description>Formula removes &quot;+44&quot; from users&apos; mobile number</description>
        <formula>IF(
   BEGINS(Info_Eve_Mktg_lead__r.MobilePhone, &quot;+44 0&quot;),
   RIGHT(Info_Eve_Mktg_lead__r.MobilePhone,  LEN(Info_Eve_Mktg_lead__r.MobilePhone)-4 ),
   IF(
      BEGINS(Info_Eve_Mktg_lead__r.MobilePhone, &quot;+44 7&quot;),
      &quot;0&quot;&amp;RIGHT(Info_Eve_Mktg_lead__r.MobilePhone,  LEN(Info_Eve_Mktg_lead__r.MobilePhone)-4 ),
      Info_Eve_Mktg_lead__r.MobilePhone
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mobile number of the Marketing lead. Automatically populated once the Marketing lead has been selected</inlineHelpText>
        <label>PIE Sales lead mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Eve_date__c</fullName>
        <label>PIE date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Info_Eve_time__c</fullName>
        <label>PIE time</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Eve_venue_address__c</fullName>
        <inlineHelpText>The address of the info eve venue. This must be correctly spelt and in the correct case, so that it can be merged into a letter</inlineHelpText>
        <label>PIE venue address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Eve_venue_name__c</fullName>
        <description>Name of the info eve venue. Entered by Marketing</description>
        <inlineHelpText>The name of the info eve venue. This must be correctly spelt and in the correct case, so that it can be merged into a letter</inlineHelpText>
        <label>PIE venue name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_eve_additional_info__c</fullName>
        <label>PIE additional info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JPs__c</fullName>
        <label>#JPs</label>
        <summarizedField>Job__c.JPs__c</summarizedField>
        <summaryForeignKey>Job__c.Wave__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Learning_Difficulties__c</fullName>
        <formula>TEXT( PC_venue__r.Learning_Difficulties__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Learning Difficulties</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_display_text_online__c</fullName>
        <description>Wave location as displayed on website</description>
        <inlineHelpText>Wave location as displayed on website. Leave blank to avoid location display</inlineHelpText>
        <label>Location display text online</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Sign_Off__c</fullName>
        <description>MM to fill in a date when all the Marketing Information Evening fields have been checked.</description>
        <inlineHelpText>MM to fill in a date when all the Marketing Information Evening fields have been checked.</inlineHelpText>
        <label>SM Sign Off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>MM responsible for the wave</description>
        <label>SM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Waves2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MM_confirmed_PCKO_starters__c</fullName>
        <inlineHelpText>Marketing Manager enters the date when they confirm that the number Mktg Number of YPs started Wave (entered by SC/AMM) is correct</inlineHelpText>
        <label>ASM confirmed PCKO starters</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM_confirmed_number_of_late_starters__c</fullName>
        <inlineHelpText>Enter the date when Marketing Manager confirms the number of late starters for the wave</inlineHelpText>
        <label>ASM confirmed number of late starters</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM_email__c</fullName>
        <label>SM email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Register_Received__c</fullName>
        <label>Sales Register Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Register_Signed_Out__c</fullName>
        <label>Sales Register Signed Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_18_allowed__c</fullName>
        <label>Max Number of 18+ allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_SL5_allowed__c</fullName>
        <label>Max Number of SL5 allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_SL_3_allowed__c</fullName>
        <label>Max Number of SL 3# allowed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_SL_3a_allowed__c</fullName>
        <label>Max Number of SL 3a allowed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_SL_3b_allowed__c</fullName>
        <label>Max Number of SL 3b allowed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_SL_4a_allowed__c</fullName>
        <label>Max Number of SL 4a allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Number_of_SL_4b_allowed__c</fullName>
        <label>Max Number of SL 4b allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_number_of_HTR_allowed__c</fullName>
        <label>Max number of HTR allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Med_info_4_weeks_prior__c</fullName>
        <label>Med info 4 weeks prior</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Medical_form_template__c</fullName>
        <label>Medical form template</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Summary</fullName>
                </value>
                <value>
                    <fullName>Full details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_template_formula__c</fullName>
        <formula>IF(ISPICKVAL( Medical_form_template__c , &quot;Summary&quot;), &quot;a2MC0000000Q5M1&quot;, &quot;a2MC0000003NosN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical template formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicals_Name__c</fullName>
        <formula>Name &amp; &quot; Medical Forms&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medicals Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_Add_details_of_late_starters__c</fullName>
        <inlineHelpText>Enter the following information for each late starter: Full name of YP; Date YP arrived on the programme; Reason for late start</inlineHelpText>
        <label>Sales Add details of late starters</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mktg_Number_of_YPs_started_Wave__c</fullName>
        <description>The number of YPs that marketing have calculated have got on the bus at PCKO</description>
        <inlineHelpText>The number of YPs that marketing have calculated have got on the bus at PCKO</inlineHelpText>
        <label>Sales Number of YPs started Wave at PCKO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mktg_details_of_late_starters__c</fullName>
        <description>Provides history of when and who enters info of late starters and their comments.  Data is entered in the Mktg Add details of late starters and it&apos;s stored in this field</description>
        <label>Sales details of late starters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mktg_number_of_late_starters_after_PCKO__c</fullName>
        <description>The number of YPs that started after PCKO (ie did not get on the bus at PCKO) but within 3 days of wave starting</description>
        <inlineHelpText>The number of YPs that started after PCKO (ie did not get on the bus at PCKO) but within 3 days of wave starting</inlineHelpText>
        <label>Sales number of late starters after PCKO</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mktg_total_number_of_YPs_on_wave__c</fullName>
        <formula>Mktg_Number_of_YPs_started_Wave__c  +  Mktg_number_of_late_starters_after_PCKO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Adds the Mktg Number of YPs started Wave to Mktg number of late starters after PCKO</inlineHelpText>
        <label>Sales total number of YPs on wave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCSZone__c</fullName>
        <formula>IF(ISBLANK( NCS_Zone__c ),


IF(
OR(
INCLUDES(Boroughs_or_areas__c , &quot;Barking and Dagenham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Barnet&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Brent&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Camden&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Enfield&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Hackney&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Haringey&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Harrow&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Havering&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Hillingdon&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Islington&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Redbridge&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Tower Hamlets&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Westminster&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Waltham Forest&quot;)
),&quot;LNN&quot;,

IF(
OR(
INCLUDES(Boroughs_or_areas__c , &quot;Bexley&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Bromley&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Croydon&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Ealing&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Greenwich&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Hammersmith And Fulham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Hounslow&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Kensington And Chelsea&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Kingston&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Lambeth&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Lewisham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Merton&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Newham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Richmond&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Southwark&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Sutton&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Wandsworth&quot;)
),&quot;LNS&quot;,

IF(
OR(
INCLUDES(Boroughs_or_areas__c , &quot;Epsom&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Reigate&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Guildford&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Staines&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Woking&quot;)
),&quot;SE3&quot;,

IF(
OR(
INCLUDES(Boroughs_or_areas__c , &quot;Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Coventry&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Dudley&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Sandwell&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Solihull&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Walsall&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Warwickshire&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;North Warwickshire&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;South Warwickshire&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Wolverhampton&quot;),
INCLUDES(Boroughs_or_areas__c , &quot;SW Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;SE Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;NW Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;NE Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;CNE Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;CSE Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;CSW Birmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;CSEBirmingham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;CNW Birmingham&quot;)
),&quot;WM2&quot;,

IF(
OR(
INCLUDES(Boroughs_or_areas__c , &quot;Bury&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Manchester&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Oldham&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Rochdale&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Stockport&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Tameside&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Trafford&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Warrington&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Wigan&quot;) 
),&quot;NW2&quot;,
IF(
OR(
INCLUDES(Boroughs_or_areas__c , &quot;Blackburn With Darwen&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Blackpool&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Cumbria&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;West Lancashire&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Cumbria&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Burnley&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Blackburn&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Preston&quot;), 
INCLUDES(Boroughs_or_areas__c , &quot;Lancashire&quot;)
),
&quot;NW3&quot;,&quot;ERROR&quot;))))))
,NCS_Zone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Prime__c</fullName>
        <formula>IF (NCSZone__c = &quot;NW3&quot;, &quot;INS&quot;,&quot;TCN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCS Prime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Zone__c</fullName>
        <label>NCS ZoneOld</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_public_transport__c</fullName>
        <label>Nearest public transport</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoHTMU_Graduation_Programme_Type_Formula__c</fullName>
        <formula>CASE( Pilot_or_Non_Pilot__c , &quot;Pilot&quot;, &quot;a2MC0000000PgCL&quot;, &quot;Non Pilot&quot;, &quot;a2MC0000000PgCa&quot;, &quot;Invalid ID&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NoHTMU:Graduation:Programme Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoHTMU_Graduation_Programme_Type_Text__c</fullName>
        <label>NoHTMU:Graduation: Programme Type Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_HTMU_Document_Name__c</fullName>
        <formula>Name &amp;&quot;_No_HTMU&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No HTMU Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Residential_TC_Wave__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When ticked this means that the TC week is residential</inlineHelpText>
        <label>Residential TC Wave Autumn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotEligible_Graduation_ProgrammeTypeForm__c</fullName>
        <formula>CASE( Pilot_or_Non_Pilot__c , &quot;Pilot&quot;, &quot;a2MC0000000PgCQ&quot;, &quot;Non Pilot&quot;, &quot;a2MC0000000PgCB&quot;, &quot;Invalid ID&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NotEligible:Graduation:ProgrammeTypeForm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotEligible_Graduation_ProgrammeTypeText__c</fullName>
        <label>NotEligible:Graduation:ProgrammeTypeText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Not_Eligibble_SL5__c</fullName>
        <formula>Name &amp;&quot;_Not_Eligibble_&amp;_SL5&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Eligibble &amp; SL5 Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Graduation_Guests_Permitted__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of Graduation Guests Permitted</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Level_4_s_allowed_on_Wave__c</fullName>
        <label>Number of Level 4&apos;s allowed on Wave</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_NCS_Evaluation_surveys__c</fullName>
        <label>Number of NCS Evaluation surveys</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Teams__c</fullName>
        <label>Number of Teams</label>
        <summaryForeignKey>Team__c.Wave__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_additional_non_NCS_YPs__c</fullName>
        <inlineHelpText>This is the number of additional YPs who have either started too late or who are starting the programme again (not to be included in NCS reporting)</inlineHelpText>
        <label>Number of additional non-NCS YPs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OBS_Wave_End_Date__c</fullName>
        <description>Displays the wave end date for OBS on the &apos;Your Place Is Confirmed&apos; screen. The value of the formula may display RCD or RCA end dates depending on whether or not this is a pilot. This field and Wave_Priority__c.Part_3_End_date__c should have the same formula as they are both what the YP will see as the Wave&apos;s end date when signing up.</description>
        <formula>IF( 
ISPICKVAL(Pilot__c, &quot;NCS Sequential RCA&quot;), 
RCD_end_date__c, 
RCA_End_Date__c 
)</formula>
        <label>OBS Wave End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oldest_date_of_birth_possible__c</fullName>
        <description>Oldest DOB of YP to be able to go on this wave.</description>
        <label>Oldest date of birth possible</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Online_Ind_Sch_bookings_percentage_full__c</fullName>
        <description>Percentage of independent school online places that are full (either assigned or reserved)</description>
        <formula>IF (Online_independent_school_capacity__c &gt; 0, Total_Ind_School_Reserved_Assign__c / Online_independent_school_capacity__c, 1)</formula>
        <inlineHelpText>Percentage of independent school online places that are full (either assigned or reserved)</inlineHelpText>
        <label>Online Ind Sch bookings, percentage full</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Online_Ind_School_over_bookings__c</fullName>
        <description>Subtracts the total independent school reserved/assigned YP from the total capacity for independent school YP (no other variables are taken into account). If the wave is overbooked for such YP, a minus number will be displayed.</description>
        <formula>Online_independent_school_capacity__c -  Total_Ind_School_Reserved_Assign__c</formula>
        <inlineHelpText>Subtracts the total independent school reserved/assigned YP from the total capacity for independent school YP (no other variables are taken into account). If the wave is overbooked for such YP, a minus number will be displayed.</inlineHelpText>
        <label>Online Ind School (over)bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Ind_School_places_available__c</fullName>
        <description>Formula subtracting assigned/reserved places from capacity, to calculate number of remaining places</description>
        <formula>MIN( Online_booking_YP_place_capacity__c - Total_Reserved_Assigned__c , Online_independent_school_capacity__c  - Total_Ind_School_Reserved_Assign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of remaining places for someone at an independent school</inlineHelpText>
        <label>Online Ind School places available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_SL3_places_available__c</fullName>
        <formula>MIN(Online_places_available__c, Online_YP_SL3_capacity__c - Total_SL3_Reserved_Assign__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online SL3 places available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_YP_SL3_capacityOLD__c</fullName>
        <formula>Round(Online_booking_YP_place_capacity__c*YP_SL3_place_limit_percentage__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Online YP SL3 capacityOLD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_YP_SL3_capacity__c</fullName>
        <label>Online YP SL3 capacity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_YP_bookings_percentage_full__c</fullName>
        <description>Percentage of online places that are full (either assigned or reserved)</description>
        <formula>Total_Reserved_Assigned__c   / Online_booking_YP_place_capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of online places that are full (either assigned or reserved)</inlineHelpText>
        <label>Online YP bookings, percentage full</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Online_YP_female_capacity__c</fullName>
        <description>Number of online places available for girls. Calculated from total capacity and female percentage limit</description>
        <formula>Round (Online_booking_YP_place_capacity__c  * YP_female_place_limit_percentage__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of online places available for girls. Calculated from total capacity and female percentage limit</inlineHelpText>
        <label>Online YP female capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_YP_male_capacity__c</fullName>
        <description>Number of online places available for boys. Calculated from total capacity and male percentage limit</description>
        <formula>Round (Online_booking_YP_place_capacity__c * YP_male_place_limit_percentage__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of online places available for boys. Calculated from total capacity and male percentage limit</inlineHelpText>
        <label>Online YP male capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_booking_YP_place_capacity__c</fullName>
        <description>Maximum number of YP who can be booked onto the wave, online. Calculated from overbooking total minus the total places held back</description>
        <formula>YP_place_capacity_including_overbooking__c  -  (YP_places_held_back_total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Maximum number of YP who can be booked onto the wave, online. Calculated from overbooking total minus the total places held back</inlineHelpText>
        <label>Online booking YP place capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_champion_school_capacity__c</fullName>
        <description>Number of online places available for YP at a champion school. Calculated from total online capacity and single school percentage limit</description>
        <formula>Round (Online_booking_YP_place_capacity__c * Champion_school_place_limit_percentage__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of online places available for YP at a champion school. Calculated from total online capacity and single school percentage limit</inlineHelpText>
        <label>Online champion school capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_female_Ind_places_available__c</fullName>
        <description>Returns the minimum of independent places available and female places available (both of which already take the total number of places into account)</description>
        <formula>MIN(  Online_female_places_available__c,  Online_Ind_School_places_available__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of places available for girls at independent school</inlineHelpText>
        <label>Online female Ind places available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_female_bookings_percentage_full__c</fullName>
        <description>Percentage of female online places that are full (either assigned or reserved)</description>
        <formula>IF (Online_YP_female_capacity__c &gt; 0, Girls_Reserved_Assigned__c / Online_YP_female_capacity__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of female online places that are full (either assigned or reserved)</inlineHelpText>
        <label>Online female bookings, percentage full</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Online_female_over_bookings__c</fullName>
        <description>Subtracts the total female reserved/assigned YP from the total capacity for female YP (no other variables are taken into account). If the wave is overbooked for such YP, a minus number will be displayed.</description>
        <formula>Online_YP_female_capacity__c -  Girls_Reserved_Assigned__c</formula>
        <inlineHelpText>Subtracts the total female reserved/assigned YP from the total capacity for female YP (no other variables are taken into account). If the wave is overbooked for such YP, a minus number will be displayed.</inlineHelpText>
        <label>Online female (over)bookings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>